// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initial render 1`] = `
<PlacesAutocomplete
  debounce={200}
  highlightFirstSuggestion={false}
  onChange={[Function]}
  onError={[Function]}
  searchOptions={Object {}}
  shouldFetchSuggestions={true}
  value=""
>
  <div>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls="PlacesAutocomplete__autocomplete-container"
      aria-expanded={false}
      aria-haspopup={false}
      autoComplete="off"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      type="text"
      value=""
    />
    <div />
  </div>
</PlacesAutocomplete>
`;

exports[`initial render with options to props-getter 1`] = `
<PlacesAutocomplete
  debounce={200}
  highlightFirstSuggestion={false}
  onChange={[Function]}
  onError={[Function]}
  searchOptions={Object {}}
  shouldFetchSuggestions={true}
  value=""
>
  <div>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls="PlacesAutocomplete__autocomplete-container"
      aria-expanded={false}
      aria-haspopup={false}
      autoComplete="off"
      className="my-input-classname"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search Places..."
      role="combobox"
      type="text"
      value=""
    />
    <div />
  </div>
</PlacesAutocomplete>
`;
